# iQuete-SD

./: README.md
pcb/r1/project/: iQuete_SD_r1.epro
src/iQuete_SD/: CMakeLists.txt  get_input.pio  main.c
src/no-OS-FatFS-SD/sd_driver/SDIO/: rp2040_sdio.pio
